2014-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	system-name's returned value can vary
	Fixes Bug#19438.
	* doc/lispref/os.texi (System Environment):
	* etc/NEWS: Document this.
	* doc/misc/efaq.texi:
	(Displaying the current file name in the titlebar):
	* lisp/desktop.el (desktop-save-frameset):
	* lisp/dnd.el (dnd-get-local-file-uri):
	* lisp/gnus/nnvirtual.el (nnvirtual-retrieve-headers)
	(nnvirtual-update-xref-header):
	* lisp/nxml/rng-uri.el (rng-uri-file-name-1):
	* lisp/org/org-clock.el (org-clock-save):
	* src/filelock.c (current_lock_owner):
	* src/xrdb.c (get_environ_db):
	* src/xterm.c (same_x_server):
	* src/xterm.c (x_term_init):
	Prefer (system-name) to system-name.
	* doc/misc/smtpmail.texi (Server workarounds): Fix grammar.
	* src/editfns.c (cached_system_name): New static var.
	(init_and_cache_system_name): New function.
	(init_editfns, Fsystem_name): Use it.
	(syms_of_editfns): Initialize it and Vsystem_name to the same value.
	* src/sysdep.c (init_system_name): Don't create a new string if
	the current value is already correct.

2014-12-28  Paul Eggert  <eggert@cs.ucla.edu>

	* build-aux/git-hooks/commit-msg: Allow tabs.
	Treat them as if they were expanded to spaces, with tab stops
	every 8 columns.

2014-12-27  Paul Eggert  <eggert@cs.ucla.edu>

	* .gitignore: Ignore /conftest*.

2014-12-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* build-aux/git-hooks/commit-msg (at_sign): Bump up line-length limit
	to 78.

2014-12-25  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer stpcpy to strcat
	* admin/merge-gnulib (GNULIB_MODULES): Add stpcpy.
	* lib/gnulib.mk, m4/gnulib-comp.m4: Regenerate.
	* lib/stpcpy.c, m4/stpcpy.m4: New files, from gnulib.
	* lib-src/ebrowse.c (sym_scope_1, operator_name, open_file):
	* lib-src/emacsclient.c (get_server_config, set_local_socket)
	(start_daemon_and_retry_set_socket):
	* lib-src/etags.c (main, C_entries, relative_filename):
	* lib-src/pop.c (sendline):
	* lib-src/update-game-score.c (main):