@@ -542,7 +542,9 @@ optional repeat-count argument.
 ** Function `sort' can deal with vectors.
 
 ** Function `system-name' now returns an updated value if the current
-system's name has changed, or if the Emacs process has changed systems.
+system's name has changed or if the Emacs process has changed systems,
+and to avoid long waits it no longer consults DNS to canonicalize the
+name.  The variable `system-name' is now obsolete.
 
 ---
 ** New utilities in subr-x.el:
